2007-03-19  Sancho Lerena  <slerena@artica.es>

	* functions_db.php: Added give_network_profile_name() function.

	* language_en.php: Added new strings.

	* index.php, ver_agente.php, estado_generalagente.php: Some style
	fixes.

	* view_server.php: Added support for recon servers. Added LAG
	check for server processing queue.

	* view_server_detail.php: Added, to get updated information in
	realtime for queues processed by recon server.

	* modificar_agente.php: Now deletes associated IP addresses when
	deleting an agent.

	* manage_network_templates*.php: Manage network templates / profiles.

	* manage_recontask*.php: Editor for network tasks (recon server).

	* menu.php: Added new options.
	
2007-03-12  Sancho Lerena  <slerena@artica.es>

	* pandoradb.sql: Upgraded scheme, many changes and many tables
	added. I Need to commit the new "preloaded" data for this scheme,
	give me some days, this stuff are on development.

	* includes/styles/*: Many additions to reflect new menu options,
	and the tab menu title.

	* reporting/fgraph.php: Minor changes to format progressbar.

	* godmode/modules/*: Many many changes and additions (manage_*)
	for the new management system using tabs :-)

	* include/languages/language_es_es.php: Many additions.

	* operation/servers/view_server.php: Implemented detailed load for
	each servertype and latency time to each server to detect problems
	with high load.
	
	Many changes in godmode subsystem. Not detailed at this time.
	
2007-03-07  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/agentes/alert_manager.php, modificar_agente.php,
	operation/agentes/estado_generalagente.php: Small changes
	with table lines.
	
	* include/styles/pandora.css: Reduce data_box class one pix.

2007-03-06  Raul Mateos  <raulofpandora@gmail.com>

	* images/info.png: New image, replace old info.gif.
	
	* images/help.png: Change colour.
	
	* include/styles/pandora.css: Changed colour in nf class. Small changes
	in other colours.
	